Table responsables{
  id INT [pk]
  nom VARCHAR(50) [not null]
  prenom VARCHAR(50) [not null]
  email VARCHAR(100) [unique, not null]
  telephone VARCHAR(20)
  mot_de_passe VARCHAR(255) [not null]
  role VARCHAR(50) [not null] 
}
 
Table employes{ 
id_utilisateur INT [pk] 
nom VARCHAR(50) [not null] 
prenom VARCHAR(50) [not null] 
email VARCHAR(100) [unique, not null] 
telephone VARCHAR(20) 
mot_de_passe VARCHAR(255) [not null] 
} 
 

Table stock {
  id INT [pk]
  nom VARCHAR(100) [not null]
  quantite DECIMAL(10,2) [not null] /* 50, 200 exct .. /
  unite VARCHAR(20) [not null]  /ml, kg, piece ...*/
  id_categorie INT 
  seuil_alerte DECIMAL(10,2)
  emballage VARCHAR(50)
}

Table roles{
id_role INT [pk]
nom VARCHAR(50) [not null]
} 

Ref: employes.id_utilisateur > responsables.id
Ref: roles.id_role > employes.id_utilisateur
Ref: stock.id < employes.id_utilisateur